--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="main-navigation">
         <nav class="navbar navbar-expand-lg">
           <div class="container position-relative">
-            <a class="navbar-brand" href="index-2.html">
+            <a class="navbar-brand" href="/">
               <img src="assets/img/logo/logo.png" alt="logo" />
             </a>
             <div class="mobile-menu-right">
@@ -1807,14 +1807,30 @@ Activities</a></li>
       </div>
     </main>
 
+        
+
+    <!-- //contacts area -->
     <main class="main">
       <div class="contact-area py-120">
         <div class="container">
           <div class="contact-wrapper">
             <div class="row">
+              <div class="col-lg-6 mx-auto">
+                <div class="site-heading text-center">
+                  <span class="site-title-tagline"
+                  ><i class="far fa-book-open-reader"></i>Contact Us</span
+                  >
+                  <h2 class="site-title">Connect With Us</h2>
+                  <p>
+                    Join us to engage with experts and like-minded individuals as we explore new ideas and opportunities for growth and learning.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="row">
               <div class="col-lg-5">
                 <div class="contact-img">
-                  <img src="assets/img/contact/01.jpg" alt />
+                  <img src="assets/img/contact/01.jpg" alt="Discussion Image" />
                 </div>
               </div>
               <div class="col-lg-7 align-self-center">
@@ -1822,10 +1838,7 @@ Activities</a></li>
                   <div class="contact-form-header">
                     <h2>Get In Touch</h2>
                     <p>
-                      It is a long established fact that a reader will be
-                      distracted by the readable content of a page randomised
-                      words which don't look even slightly when looking at its
-                      layout.
+                      We value your inquiries and feedback. Please reach out to us using the form below, and we will respond as promptly as possible.
                     </p>
                   </div>
                   <form
@@ -1907,8 +1920,8 @@ Activities</a></li>
           <div class="row footer-widget-wrapper pt-100 pb-70">
             <div class="col-md-6 col-lg-4">
               <div class="footer-widget-box about-us">
-                <a href="#" class="footer-logo">
-                  <img src="assets/img/logo/logo-light.png" alt />
+                <a href="/" class="footer-logo">
+                  <img src="assets/img/logo/logo.png" alt />
                 </a>
                 <p class="mb-3">
                   We are many variations of passages available but the majority
@@ -1917,8 +1930,8 @@ Activities</a></li>
                 </p>
                 <ul class="footer-contact">
                   <li>
-                    <a href="tel:+918885123456"
-                      ><i class="far fa-phone"></i>+91 8885123456</a
+                    <a href="tel:+918086500023"
+                      ><i class="far fa-phone"></i>+91 8086500023</a
                     >
                   </li>
                   <li>
