--- a/index.html
+++ b/index.html
@@ -1535,17 +1535,7 @@ Activities</a></li>
           </div>
         </div>
       </div> -->
-      <div class="department-area bg py-120">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-6 mx-auto">
-              <div class="site-heading text-center">
-                <span class="site-title-tagline"><i class="far fa-book-open-reader"></i> Department</span>
-                <h2 class="site-title">Browse Our <span>Pharmacy Departments</span></h2>
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-              </div>
-            </div>
-          </div>
+      
           <div class="department-area bg py-120">
             <div class="container">
               <div class="row">
@@ -1764,7 +1754,7 @@ Activities</a></li>
           <div class="partner-wrapper partner-slider owl-carousel owl-theme">
             <img src="assets/img/partner/Partner_1.png" alt="thumb" />
             <img src="assets/img/partner/Partner_2.png" alt="thumb" />
-            <img src="assets/img/partner/partner_3.png" alt="thumb" />
+            <img src="assets/img/partner/Partner_3.png" alt="thumb" />
             <img src="assets/img/partner/partner_4.png" alt="thumb" />
             <img src="assets/img/partner/partner_5.png" alt="thumb" />
           </div>
@@ -1807,7 +1797,7 @@ Activities</a></li>
                     </p>
                   </div>
 
-                  <form action="https://formsubmit.co/itmanager@edentu.com" method="POST" id="contact-form">
+                  <form  method="POST" id="contact-form">
                     <div class="row">
                       <div class="col-md-6">
                         <div class="form-group">
