--- a/index.html
+++ b/index.html
@@ -1752,11 +1752,11 @@ Activities</a></li>
       <div class="partner-area bg pt-50 pb-50">
         <div class="container">
           <div class="partner-wrapper partner-slider owl-carousel owl-theme">
-            <img src="assets/img/partner/Partner_1.png" alt="thumb" />
-            <img src="assets/img/partner/Partner_2.png" alt="thumb" />
-            <img src="assets/img/partner/Partner_3.png" alt="thumb" />
-            <img src="assets/img/partner/partner_4.png" alt="thumb" />
-            <img src="assets/img/partner/partner_5.png" alt="thumb" />
+            <img src="assets/img/partner/Partner_1.png" alt="MCP Manoor" />
+            <img src="assets/img/partner/Partner_2.png" alt="MCP Manoor" />
+            <img src="assets/img/partner/Partner_3.png" alt="MCP Manoor" />
+            <img src="assets/img/partner/Partner_4.png" alt="MCP Manoor" />
+            <img src="assets/img/partner/Partner_5.png" alt="MCP Manoor" />
           </div>
         </div>
       </div>
