--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </div>
                     <div class="header-top-contact-info">
                       <h6>Call Now</h6>
-                      <a href="tel:+21236547898">+91 8086500023</a>
+                      <a href="tel:+918086500023">+91 8086500023</a>
                     </div>
                   </li>
                 </ul>
@@ -464,7 +464,7 @@ Activities</a></li>
         </div>
       </div>
 
-      <div class="feature-area">
+      <!-- <div class="feature-area">
         <div class="container">
           <div class="feature-wrapper">
             <div class="row">
@@ -522,7 +522,7 @@ Activities</a></li>
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="about-area py-120" id="about-us">
         <div class="container">
@@ -530,7 +530,7 @@ Activities</a></li>
             <div class="col-lg-6">
               <div class="about-left wow fadeInLeft" data-wow-delay=".25s">
                 <div class="about-img">
-                  <img src="https://mdcrc.edu.in/upload/about-title-bg.jpg" alt="" />
+                  <img src="./assets/img/about/01.jpg" alt="" />
                 </div>
                 <div class="about-experience">
                   <div class="about-experience-icon">
@@ -592,7 +592,7 @@ Activities</a></li>
         </div>
       </div>
 
-      <div class="counter-area pt-60 pb-60">
+      <!-- <div class="counter-area pt-60 pb-60">
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-sm-6">
@@ -665,7 +665,7 @@ Activities</a></li>
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="course-area py-120" id="courses">
         <div class="container">
@@ -710,7 +710,7 @@ Activities</a></li>
                     </div>
                   </div>
                   <h4 class="course-title">
-                    <a href="course-single.html">Bachelor of Pharmacy (B-Pharm)</a>
+                    <span>Bachelor of Pharmacy (B-Pharm)</span>
                   </h4>
                   <p class="course-text">
                     The Bachelor of Pharmacy (B-Pharm) program is designed to provide comprehensive knowledge about the science of medication. Students will explore various aspects of pharmacy, including pharmacology, pharmaceutical chemistry, pharmacognosy, and pharmacy practice.
@@ -718,7 +718,7 @@ Activities</a></li>
                   <div class="course-bottom">
                     <div class="course-bottom-left">
                       <span><i class="far fa-users"></i> 60 Seats</span>
-                      <span><i class="far fa-clock"></i> 5 Years</span>
+                      <span><i class="far fa-clock"></i> 4 Years</span>
                     </div>
                     <!-- Price removed as per request -->
                   </div>
@@ -1623,25 +1623,46 @@ Activities</a></li>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
+              </div>
+              <div class="testimonial-quote">
+                <p>
+                  As a second-year BDS student, I've had an exceptional experience at Malabar Dental College. The college offers excellent infrastructure, supportive faculties, and well-maintained labs. I appreciate the hostel facilities and extracurricular activities.                
+              </div>
+              <div class="testimonial-content">
+                <div class="testimonial-author-img">
+                  <img src="https://mdcrc.edu.in/upload/testimonial5.jpg" alt />
+                </div>
+                <div class="testimonial-author-info">
+                  <h4>Nora C Pulayath</h4>
+                  <p>MDC Student</p>
+                </div>
+              </div>
+              <!-- <span class="testimonial-quote-icon"
+                ><i class="far fa-quote-right"></i
+              ></span> -->
+            </div>
+            <div class="testimonial-single">
+              <div class="testimonial-rate">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
               </div>
               <div class="testimonial-quote">
                 <p>
-                  "The learning environment is incredibly supportive and enriching, allowing me to thrive academically."
-                </p>
+                  Our college boasts top-notch infrastructure and facilities, offering affordable healthcare to the public, field exposure, and internship opportunities, enriching academic experiences and vibrant campus life.                
               </div>
               <div class="testimonial-content">
                 <div class="testimonial-author-img">
-                  <img src="assets/img/testimonial/01.jpg" alt />
+                  <img src="https://mdcrc.edu.in/upload/testimonial1.jpg" alt />
                 </div>
                 <div class="testimonial-author-info">
-                  <h4>Suhad</h4>
-                  <p>Student</p>
+                  <h4>Dr. Sneha T.E</h4>
+                  <p>MDC Student</p>
                 </div>
               </div>
-              <span class="testimonial-quote-icon"
+              <!-- <span class="testimonial-quote-icon"
                 ><i class="far fa-quote-right"></i
-              ></span>
+              ></span> -->
             </div>
             <div class="testimonial-single">
               <div class="testimonial-rate">
@@ -1649,77 +1670,45 @@ Activities</a></li>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
               </div>
               <div class="testimonial-quote">
                 <p>
-                  "The faculty's dedication to student success is evident through their continuous support and guidance."
-                </p>
+                  MDC has provided me with a number of opportunities to grow and explore my skills. Grateful to be taught under such renowed teaching faculties and their guidance has really helped me in my practice.                </p>
               </div>
               <div class="testimonial-content">
                 <div class="testimonial-author-img">
-                  <img src="assets/img/testimonial/02.jpg" alt />
+                  <img src="https://mdcrc.edu.in/upload/testimonial3.jpg" alt />
                 </div>
                 <div class="testimonial-author-info">
-                  <h4>Jassem</h4>
-                  <p>Student</p>
+                  <h4>Dr. Vismaya</h4>
+                  <p>MDC Student</p>
                 </div>
               </div>
-              <span class="testimonial-quote-icon"
+              <!-- <span class="testimonial-quote-icon"
                 ><i class="far fa-quote-right"></i
-              ></span>
-            </div>
-            <div class="testimonial-single">
-              <div class="testimonial-rate">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <!-- <i class="fas fa-star"></i> -->
-              </div>
-              <div class="testimonial-quote">
-                <p>
-                  "Engaging in hands-on projects and research has been a game-changer for my professional development."
-                </p>
-              </div>
-              <div class="testimonial-content">
-                <div class="testimonial-author-img">
-                  <img src="assets/img/testimonial/03.jpg" alt />
-                </div>
-                <div class="testimonial-author-info">
-                  <h4>Aswamegah</h4>
-                  <p>Student</p>
-                </div>
-              </div>
-              <span class="testimonial-quote-icon"
-                ><i class="far fa-quote-right"></i
-              ></span>
+              ></span> -->
             </div>
             <div class="testimonial-single">
               <div class="testimonial-rate">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i the="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <!-- <i class="fas fa-star"></i> -->
               </div>
               <div class="testimonial-quote">
                 <p>
-                  "The diverse community at our campus fosters an incredible learning atmosphere that is both inspiring and motivating."
-                </p>
-              </div>
+                  The infrastructure is the main highlight of this college. The college campus has a peaceful ambience. MDC provides quality education ,opportunity to learn and inculcate new skills.              </div>
               <div class="testimonial-content">
                 <div class="testimonial-author-img">
-                  <img src="assets/img/testimonial/04.jpg" alt />
+                  <img src="https://mdcrc.edu.in/upload/testimonial7.jpg" alt />
                 </div>
                 <div class="testimonial-author-info">
-                  <h4>Sourav</h4>
-                  <p>Student</p>
+                  <h4>Aliya Jacob</h4>
+                  <p>MDC Student</p>
                 </div>
               </div>
-              <span class="testimonial-quote-icon"
+              <!-- <span class="testimonial-quote-icon"
                 ><i class="far fa-quote-right"></i
-              ></span>
+              ></span> -->
             </div>
             <div class="testimonial-single">
               <div class="testimonial-rate">
@@ -1731,32 +1720,31 @@ Activities</a></li>
               </div>
               <div class="testimonial-quote">
                 <p>
-                  "The campus offers a variety of resources that greatly enhance our learning experiences and outcomes."
-                </p>
+                  I’m really happy and proud to be a former student of this institution which was a turning point in my life. Really proud of the teachers who were of great support and guidance.                </p>
               </div>
               <div class="testimonial-content">
                 <div class="testimonial-author-img">
-                  <img src="assets/img/testimonial/05.jpg" alt />
+                  <img src="https://mdcrc.edu.in/upload/testimonial2.jpg" alt />
                 </div>
                 <div class="testimonial-author-info">
-                  <h4>Harsal</h4>
-                  <p>Student</p>
+                  <h4>Dr. Neema K</h4>
+                  <p>MDC Student</p>
                 </div>
               </div>
-              <span class="testimonial-quote-icon"
+              <!-- <span class="testimonial-quote-icon"
                 ><i class="far fa-quote-right"></i
-              ></span>
+              ></span> -->
             </div>
           </div>
 
       <div class="partner-area bg pt-50 pb-50" >
         <div class="container">
           <div class="partner-wrapper partner-slider owl-carousel owl-theme">
-            <img src="assets/img/partner/Partner_1.png" alt="MCP Manoor" />
-            <img src="assets/img/partner/Partner_2.png" alt="MCP Manoor" />
-            <img src="assets/img/partner/Partner_3.png" alt="MCP Manoor" />
-            <img src="assets/img/partner/Partner_4.png" alt="MCP Manoor" />
-            <img src="assets/img/partner/Partner_5.png" alt="MCP Manoor" />
+            <a href="https://mdcrc.edu.in/"><img src="assets/img/partner/Partner_1.png" alt="MCP Manoor" /></a>
+            <a href="https://ekc.edu.in/"><img src="assets/img/partner/Partner_2.png" alt="MCP Manoor" /></a>
+            <!-- <a href="#"><img src="assets/img/partner/Partner_3.png" alt="MCP Manoor" /></a> -->
+            <a href="https://edentu.com/"><img src="assets/img/partner/Partner_4.png" alt="MCP Manoor" /></a>
+            <a href="https://levalorhealth.com/"><img src="assets/img/partner/Partner_5.png" alt="MCP Manoor" /></a>
           </div>
         </div>
       </div>
@@ -1797,7 +1785,7 @@ Activities</a></li>
                     </p>
                   </div>
 
-                  <form  method="POST" id="contact-form">
+                  <form action="https://formsubmit.co/itmanager@edentu.com" method="POST" id="contact-form">
                     <div class="row">
                       <div class="col-md-6">
                         <div class="form-group">
@@ -2001,7 +1989,7 @@ Activities</a></li>
               <div class="col-md-6 align-self-center">
                 <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
-                  <a href="#">Edentu Pvt ltd</a> All Rights Reserved.
+                  <a href="#">Edentu Pvt Ltd</a> All Rights Reserved.
                 </p>
               </div>
               <div class="col-md-6 align-self-center">
