Added new partners and logos

--- a/index.html
+++ b/index.html
@@ -955,8 +955,9 @@ Activities</a></li>
               <div class="col-lg-12">
                 <div class="video-wrapper">
                   <a
-                    class="play-btn popup-youtube"
-                    href="https://www.youtube.com/watch?v=BSrgyMV1w-E"
+                    class="play-btn"
+                    href="https://www.youtube.com/watch?v=sQZmk9EUsTc"
+                    target="_blank"
                   >
                     <i class="fas fa-play"></i>
                   </a>
@@ -966,6 +967,7 @@ Activities</a></li>
           </div>
         </div>
       </div>
+      
 
       <div class="team-area py-120">
         <div class="container">
@@ -997,8 +999,30 @@ Activities</a></li>
                 </div> -->
                 <div class="team-content">
                   <div class="team-bio">
-                    <h5><a href="director-single.html">Dr. C P Ali Bava Haji</a></h5>
+                    <h5><a href="https://www.thecigworld.com/dr-c-p-ali-bava-haji/">Dr. C P Ali Bava Haji</a></h5>
                     <span>Chairman</span>
+                  </div>
+                </div>
+                <!-- <span class="team-social-btn"
+                  ><i class="far fa-share-nodes"></i
+                ></span> -->
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+              <div class="team-item wow fadeInUp" data-wow-delay=".50s">
+                <div class="team-img">
+                  <img src="https://mdcrc.edu.in/upload/vc.jpg" alt="thumb" />
+                </div>
+                <!-- <div class="team-social">
+                  <a href="#"><i class="fab fa-facebook-f"></i></a>
+                  <a href="#"><i class="fab fa-twitter"></i></a>
+                  <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                  <a href="#"><i class="fab fa-youtube"></i></a>
+                </div> -->
+                <div class="team-content">
+                  <div class="team-bio">
+                    <h5><a href="https://www.linkedin.com/in/mohammed-shihab-ab-1a337524/">Mohammed Shihab</a></h5>
+                    <span>Vice Chairman</span>
                   </div>
                 </div>
                 <!-- <span class="team-social-btn"
@@ -1019,7 +1043,7 @@ Activities</a></li>
                 </div> -->
                 <div class="team-content">
                   <div class="team-bio">
-                    <h5><a href="director-single.html">Thufail Mohamed</a></h5>
+                    <h5><a href="https://www.linkedin.com/in/thufailm">Thufail Mohamed</a></h5>
                     <span>Vice Chairman</span>
                   </div>
                 </div>
@@ -1041,7 +1065,7 @@ Activities</a></li>
                 </div> -->
                 <div class="team-content">
                   <div class="team-bio">
-                    <h5><a href="director-single.html">Sameerah Ali Bava</a></h5>
+                    <h5><a href="https://in.linkedin.com/in/sameerah-ali-bava-359a55174">Sameerah Ali Bava</a></h5>
                     <span>Vice Chairperson</span>
                   </div>
                 </div>
@@ -1063,7 +1087,7 @@ Activities</a></li>
                 </div> -->
                 <div class="team-content">
                   <div class="team-bio">
-                    <h5><a href="director-single.html">Adv. Shihab Mecheri</a></h5>
+                    <h5><a href="https://in.linkedin.com/in/shihabmrahman">Adv. Shihab Mecheri</a></h5>
                     <span>CEO</span>
                   </div>
                 </div>
@@ -1740,11 +1764,12 @@ Activities</a></li>
       <div class="partner-area bg pt-50 pb-50" >
         <div class="container">
           <div class="partner-wrapper partner-slider owl-carousel owl-theme">
-            <a href="https://mdcrc.edu.in/"><img src="assets/img/partner/Partner_1.png" alt="MCP Manoor" /></a>
-            <a href="https://ekc.edu.in/"><img src="assets/img/partner/Partner_2.png" alt="MCP Manoor" /></a>
-            <!-- <a href="#"><img src="assets/img/partner/Partner_3.png" alt="MCP Manoor" /></a> -->
-            <a href="https://edentu.com/"><img src="assets/img/partner/Partner_4.png" alt="MCP Manoor" /></a>
-            <a href="https://levalorhealth.com/"><img src="assets/img/partner/Partner_5.png" alt="MCP Manoor" /></a>
+            <a href="https://mdcrc.edu.in/"><img src="assets/img/partner/Partner_1.png" alt="MDCRC" /></a>
+            <a href="https://ekc.edu.in/"><img src="assets/img/partner/Partner_2.png" alt="EKC" /></a>
+            <a href="https://edentu.com/"><img src="assets/img/partner/Partner_4.png" alt="Edentu" /></a>
+            <a href="https://levalorhealth.com/"><img src="assets/img/partner/Partner_5.png" alt="Levalor Health" /></a>
+            <a href="https://malabarccs.edu.in/"><img src="assets/img/partner/Partner_6.png" alt="MCCS" /></a>
+            <a href="https://alameen.edu.in/"><img src="assets/img/partner/Partner_7.png" alt="Alameen" /></a>
           </div>
         </div>
       </div>
@@ -1773,7 +1798,7 @@ Activities</a></li>
             <div class="row">
               <div class="col-lg-5">
                 <div class="contact-img">
-                  <img src="assets/img/contact/01.jpg" alt="Discussion Image" />
+                  <img src="assets/img/slider/slider-3.jpeg" alt="Discussion Image" />
                 </div>
               </div>
               <div class="col-lg-7 align-self-center">
