Updated linkdin tag element

--- a/index.html
+++ b/index.html
@@ -987,28 +987,22 @@ Activities</a></li>
           </div>
           <div class="row">
             <div class="col-md-6 col-lg-3">
-              <div class="team-item wow fadeInUp" data-wow-delay=".25s">
-                <div class="team-img">
-                  <img src="https://mdcrc.edu.in/upload/chairman.jpg" alt="thumb" />
-                </div>
-                <!-- <div class="team-social">
-                  <a href="#"><i class="fab fa-facebook-f"></i></a>
-                  <a href="#"><i class="fab fa-twitter"></i></a>
-                  <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                  <a href="#"><i class="fab fa-youtube"></i></a>
-                </div> -->
-                <div class="team-content">
-                  <div class="team-bio">
-                    <h5><a href="https://www.thecigworld.com/dr-c-p-ali-bava-haji/">Dr. C P Ali Bava Haji</a></h5>
-                    <span>Chairman</span>
+              <a href="https://www.thecigworld.com/dr-c-p-ali-bava-haji/" target="_blank" rel="noopener noreferrer">
+                <div class="team-item wow fadeInUp" data-wow-delay=".25s">
+                  <div class="team-img">
+                    <img src="https://mdcrc.edu.in/upload/chairman.jpg" alt="thumb" />
+                  </div>
+                  <div class="team-content">
+                    <div class="team-bio">
+                      <h5>Dr. C P Ali Bava Haji</h5>
+                      <span>Chairman</span>
+                    </div>
                   </div>
                 </div>
-                <!-- <span class="team-social-btn"
-                  ><i class="far fa-share-nodes"></i
-                ></span> -->
-              </div>
+              </a>
             </div>
             <div class="col-md-6 col-lg-3">
+              <a href="https://www.linkedin.com/in/mohammed-shihab-ab-1a337524/" target="_blank" rel="noopener noreferrer">
               <div class="team-item wow fadeInUp" data-wow-delay=".50s">
                 <div class="team-img">
                   <img src="https://mdcrc.edu.in/upload/vc.jpg" alt="thumb" />
@@ -1021,7 +1015,7 @@ Activities</a></li>
                 </div> -->
                 <div class="team-content">
                   <div class="team-bio">
-                    <h5><a href="https://www.linkedin.com/in/mohammed-shihab-ab-1a337524/">Mohammed Shihab</a></h5>
+                    <h5>Mohammed Shihab</h5>
                     <span>Vice Chairman</span>
                   </div>
                 </div>
@@ -1029,8 +1023,10 @@ Activities</a></li>
                   ><i class="far fa-share-nodes"></i
                 ></span> -->
               </div>
+              </a>
             </div>
             <div class="col-md-6 col-lg-3">
+              <a href="https://www.linkedin.com/in/thufailm" target="_blank" rel="noopener noreferrer">
               <div class="team-item wow fadeInUp" data-wow-delay=".50s">
                 <div class="team-img">
                   <img src="https://mdcrc.edu.in/upload/vc.png" alt="thumb" />
@@ -1043,7 +1039,7 @@ Activities</a></li>
                 </div> -->
                 <div class="team-content">
                   <div class="team-bio">
-                    <h5><a href="https://www.linkedin.com/in/thufailm">Thufail Mohamed</a></h5>
+                    <h5>Thufail Mohamed</h5>
                     <span>Vice Chairman</span>
                   </div>
                 </div>
@@ -1051,8 +1047,10 @@ Activities</a></li>
                   ><i class="far fa-share-nodes"></i
                 ></span> -->
               </div>
+              </a>
             </div>
             <div class="col-md-6 col-lg-3">
+              <a href="https://in.linkedin.com/in/sameerah-ali-bava-359a55174" target="_blank" rel="noopener noreferrer">
               <div class="team-item wow fadeInUp" data-wow-delay=".75s">
                 <div class="team-img">
                   <img src="https://mdcrc.edu.in/upload/vcp.jpg" alt="thumb" />
@@ -1065,7 +1063,7 @@ Activities</a></li>
                 </div> -->
                 <div class="team-content">
                   <div class="team-bio">
-                    <h5><a href="https://in.linkedin.com/in/sameerah-ali-bava-359a55174">Sameerah Ali Bava</a></h5>
+                    <h5>Sameerah Ali Bava</h5>
                     <span>Vice Chairperson</span>
                   </div>
                 </div>
@@ -1073,8 +1071,10 @@ Activities</a></li>
                   ><i class="far fa-share-nodes"></i
                 ></span> -->
               </div>
+            </a>
             </div>
             <div class="col-md-6 col-lg-3">
+              <a href="https://in.linkedin.com/in/shihabmrahman" target="_blank" rel="noopener noreferrer">
               <div class="team-item wow fadeInUp" data-wow-delay="1s">
                 <div class="team-img">
                   <img src="https://mdcrc.edu.in/upload/ceo.png" alt="thumb" />
@@ -1087,7 +1087,7 @@ Activities</a></li>
                 </div> -->
                 <div class="team-content">
                   <div class="team-bio">
-                    <h5><a href="https://in.linkedin.com/in/shihabmrahman">Adv. Shihab Mecheri</a></h5>
+                    <h5>Adv. Shihab Mecheri</a></h5>
                     <span>CEO</span>
                   </div>
                 </div>
@@ -1095,6 +1095,7 @@ Activities</a></li>
                   ><i class="far fa-share-nodes"></i
                 ></span> -->
               </div>
+              </a>
             </div>
           </div>
         </div>
