Added carrers page

--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
               <span>Malabar College of Pharmacy</span>
             </a>
             <div class="mobile-menu-right">
-              <div class="search-btn">
+              <!-- <div class="search-btn">
                 <button type="button" class="nav-right-link search-box-outer">
                   <i class="far fa-search"></i>
                 </button>
-              </div>
+              </div> -->
               <button
                 class="navbar-toggler"
                 type="button"
@@ -297,6 +297,9 @@ Activities</a></li>
                 <!-- </li> -->
                 <li class="nav-item">
                   <a class="nav-link" href="#contact-us">Contact</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#careers">Careers</a>
                 </li>
               </ul>
               <!-- <div class="nav-right">
@@ -1867,7 +1870,57 @@ Activities</a></li>
           </div>
         </div>
       </div>
-
+      
+      <div class="careers-area py-120" id="careers">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 mx-auto">
+              <div class="site-heading text-center">
+                <span class="site-title-tagline"><i class="far fa-briefcase"></i> Careers</span>
+                <h2 class="site-title">Join Our <span>Team</span></h2>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4 mb-4">
+              <div class="career-item">
+                <div class="career-img">
+                  <img src="assets/img/careers/career_1.jpg" alt="Career Image 1" style="border-radius: 10px;" />
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-4">
+              <div class="career-item">
+                <div class="career-img">
+                  <img src="assets/img/careers/career_2.jpg" alt="Career Image 2" style="border-radius: 10px;" />
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-4">
+              <div class="career-item">
+                <div class="career-img">
+                  <img src="assets/img/careers/career_3.jpg" alt="Career Image 3" style="border-radius: 10px;" />
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-4">
+              <div class="career-item">
+                <div class="career-img">
+                  <img src="assets/img/careers/career_4.jpg" alt="Career Image 4" style="border-radius: 10px;" />
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-4">
+              <div class="career-item">
+                <div class="career-img">
+                  <img src="assets/img/careers/career_5.jpg" alt="Career Image 5" style="border-radius: 10px;" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
       <div class="contact-map">
         <iframe
         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d125408.05942142766!2d76.028657!3d10.811169!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba7b9b0bbc3a929%3A0xb8791dc1538b2a2e!2sMalabar%20Dental%20College%20%26%20Research%20Centre!5e0!3m2!1sen!2sus!4v1715864663155!5m2!1sen!2sus"          style="border: 0"
