--- a/index.html
+++ b/index.html
@@ -1882,13 +1882,13 @@ Activities</a></li>
             </div>
           </div>
           <div class="row">
-            <div class="col-md-4 mb-4">
+            <!-- <div class="col-md-4 mb-4">
               <div class="career-item">
                 <div class="career-img">
                   <img src="assets/img/careers/career_1.jpg" alt="Career Image 1" style="border-radius: 10px;" />
                 </div>
               </div>
-            </div>
+            </div> -->
             <div class="col-md-4 mb-4">
               <div class="career-item">
                 <div class="career-img">
