Updated Princi photo and removed libary

--- a/index.html
+++ b/index.html
@@ -679,9 +679,7 @@ Activities</a></li>
                   ><i class="far fa-book-open-reader"></i> Our Courses</span
                 >
                 <h2 class="site-title">Let's Check Our <span>Courses</span></h2>
-                <p>
-                  It is a long established fact that a reader will be distracted
-                  by the readable content of a page when looking at its layout.
+                <p>Students will gain knowledge in areas such as pharmacology, pharmaceutical chemistry, pharmacognosy, and pharmacy practice.
                 </p>
               </div>
             </div>
@@ -980,10 +978,26 @@ Activities</a></li>
                 <span class="site-title-tagline"
                   ><i class="far fa-book-open-reader"></i> Our Team</span
                 >
+                <div class="d-flex justify-content-center" style="margin-top: 20px;">
+                  <div class="text-center">
+                    <a href="./assets/img/team/principal sir.jpg" target="_blank" rel="noopener noreferrer">
+                      <div class="team-item wow fadeInUp" data-wow-delay=".35s">
+                        <div class="team-img" style="width: 200px; height: 200px; margin: 0 auto;">
+                          <img src="./assets/img/team/principal sir.jpg" alt="thumb" style="width: 100%; height: 100%; object-fit: cover;" />
+                        </div>
+                        <div class="team-content">
+                          <div class="team-bio">
+                            <h5>Prof. Dr. JAYAPRAKASH A P</h5>
+                            <span>Principal</span>
+                          </div>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
                 <h2 class="site-title">Meet With Our <span>Directors</span></h2>
                 <p>
-                  It is a long established fact that a reader will be distracted
-                  by the readable content of a page when looking at its layout.
+                  Our directors have been successfully running the educational business for the last two decades, providing exceptional leadership and vision to ensure the highest standards of education and growth.
                 </p>
               </div>
             </div>
@@ -1768,12 +1782,12 @@ Activities</a></li>
       <div class="partner-area bg pt-50 pb-50" >
         <div class="container">
           <div class="partner-wrapper partner-slider owl-carousel owl-theme">
-            <a href="https://mdcrc.edu.in/"><img src="assets/img/partner/Partner_1.png" alt="MDCRC" /></a>
-            <a href="https://ekc.edu.in/"><img src="assets/img/partner/Partner_2.png" alt="EKC" /></a>
-            <a href="https://edentu.com/"><img src="assets/img/partner/Partner_4.png" alt="Edentu" /></a>
-            <a href="https://levalorhealth.com/"><img src="assets/img/partner/Partner_5.png" alt="Levalor Health" /></a>
-            <a href="https://malabarccs.edu.in/"><img src="assets/img/partner/Partner_6.png" alt="MCCS" /></a>
-            <a href="https://alameen.edu.in/"><img src="assets/img/partner/Partner_7.png" alt="Alameen" /></a>
+            <a href="https://mdcrc.edu.in/"><img src="assets/img/partner/Partner_1.png" alt="MDCRC" style="width: 100%; max-width: 200px; height: auto;" /></a>
+            <a href="https://ekc.edu.in/"><img src="assets/img/partner/Partner_2.png" alt="EKC" style="width: 100%; max-width: 200px; height: auto;" /></a>
+            <a href="https://edentu.com/"><img src="assets/img/partner/Partner_4.png" alt="Edentu" style="width: 100%; max-width: 200px; height: auto;" /></a>
+            <a href="https://levalorhealth.com/"><img src="assets/img/partner/Partner_5.png" alt="Levalor Health" style="width: 100%; max-width: 200px; height: auto;" /></a>
+            <a href="https://malabarccs.edu.in/"><img src="assets/img/partner/Partner_6.png" alt="MCCS" style="width: 100%; max-width: 200px; height: auto;" /></a>
+            <a href="https://alameen.edu.in/"><img src="assets/img/partner/Partner_7.png" alt="Alameen" style="width: 100%; max-width: 200px; height: auto;" /></a>
           </div>
         </div>
       </div>
@@ -1903,13 +1917,7 @@ Activities</a></li>
                 </div>
               </div>
             </div>
-            <div class="col-md-4 mb-4">
-              <div class="career-item">
-                <div class="career-img">
-                  <img src="assets/img/careers/career_4.jpg" alt="Career Image 4" style="border-radius: 10px;" />
-                </div>
-              </div>
-            </div>
+           
             <div class="col-md-4 mb-4">
               <div class="career-item">
                 <div class="career-img">
